# FileManager

./: .gitignore  CMakeLists.txt
include/: FileManager.hpp  FileManagerError.hpp
src/: FileManager.cpp  FileManagerError.cpp
tests/: main.cpp  tests.cpp
